--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-  <h4>Simply enter your last name below and discover your background`!</h4><br>
+  <h4>Simply enter your last name below and discover your background`!</h4>
 
 <form>
 Last Name:<br>
@@ -22,6 +22,7 @@ Last Name:<br>
 </form>
 </div>
 
+  <script src = "src.js"></script>
 </body>
 
 </html>
