--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
 <form>
 Last Name:<br>
-<input type = "text" name = "lname" id = "input"></input>
+<input type = "text" name = "name" value = "Enter Here" id = "input"></input>
 </form>
 </div>
 
+  <p id = "thing"></p>
   <script src = "src.js"></script>
 </body>
 
