--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 Last Name:<br>
 <input type = "text" name = "name" value = "Enter Here" id = "input"></input>
 </form>
+  
+  <button onclick = "tingy()">Submit</button>
 </div>
 
   <p id = "thing"></p>
