--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Last Name:<br>
   <p id = "thing"></p>
   
   <script>
-    var tingy = function() {
+    function tingy() {
   
 var input = document.getElementById("input").value;
 
