--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
       body{
        background-color:#C6EDD5;
        font-family: "Comic Sans MS", cursive, sans-serif;
-       margin: 0;
-       padding: 0;
       }
       
       h1{
@@ -29,7 +27,7 @@
    <h1> What is my background? </h1>
   </div>
   
-     <img src = "download.jpg">
+     <img src = "download.jpg" height = "750px" width = "1000px">
   
   <div>
    <h4>To find your background simply enter your last name in the search bar below and be amazed!</h4>
