--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       
       h1{
        text-decoration: underline;   
+       background-color: white;
+       position: fixed;
       }
   </style>
  </head>
@@ -27,7 +29,7 @@
    <h1> What is my background? </h1>
   </div>
   
-     <img src = "download.jpg" height = "750px" width = "1000px">
+     <img src = "download.jpg" height = "500px" width = "1000px">
   
   <div>
    <h4>To find your background simply enter your last name in the search bar below and be amazed!</h4>
