--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       }
       
       h1{
-       text-decoration: underline;   
-       background-color: white;
+       text-decoration: underline; 
+       width: 100%;
+       background-color:#C6EDD5;
        position: fixed;
       }
   </style>
