--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           document.getElementById("result").innerHTML = "The Gupta Lineage has roots traceable all the way back to countries such as Nigeria, Ireland, and India." + "<br>" + " Today the Guptas are:" + "<br>" + "12.5% Irish" + "<br>" + "37.5% Nigerian" + "<br>" + "50% Indian";   
          }
          
+      else if(input == "O'connor"||input == "O'Connor"||input == "Connor" || input == "connor"){
+       document.getElementById("result").innerHTML = "Henry is a white blonde canadian girl who is 55% Canadian and 45% Swedish"
+      }
          else {
           document.getElementById("result").innerHTML = "Sorry, that name isn't in our records"   
          }
