--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       else if(input == "O'connor"||input == "O'Connor"||input == "Connor" || input == "connor"){
        document.getElementById("result").innerHTML = "Henry is a white blonde canadian girl who is 55% Canadian and 45% Swedish"
       }
+      
+      else if(input == "Zhang"||input = "zhang"){
+       document.getElementById("result").innerHTML = "Todays Zhang representitives are 1000% chinese";
+      }
          else {
           document.getElementById("result").innerHTML = "Sorry, that name isn't in our records"   
          }
