--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
        document.getElementById("result").innerHTML = "Henry is a white blonde canadian girl who is 55% Canadian and 45% Swedish"
       }
       
-      else if(input == "Zhang"||input = "zhang"){
+      else if(input == "zhang"||input == "Zhang"){
        document.getElementById("result").innerHTML = "Todays Zhang representitives are 1000% chinese";
       }
          else {
